--- a/index.html
+++ b/index.html
@@ -3,22 +3,22 @@
   <head>
     <meta charset="utf-8">
     <title>Ajay Ramavath</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="icon" href="favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat:wght@200&family=Open+Sans&family=Sacramento&display=swap" rel="stylesheet">
   <body>
     <div class="topcontainer">
-      <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
+      <img class="top-cloud" src="cloud.png" alt="cloud-img">
       <h1>I'm Ajay</h1>
       <h2>a webdeveloper.</h2>
-      <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
-      <img class="mountain" src="images/mountain.png" alt="mountain-img">
+      <img class="bottom-cloud" src="cloud.png" alt="cloud-img">
+      <img class="mountain" src="mountain.png" alt="mountain-img">
    </div>
    <div class="middle-container">
      <div class="profile">
-       <img class="profile-img" src="images/man.png" alt="Profile-Img">
+       <img class="profile-img" src="man.png" alt="Profile-Img">
        <h2>Hello.</h2>
        <p class="intro">Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.</p>
      </div>
@@ -26,12 +26,12 @@
      <div class="skills">
        <h2>My Skills.</h2>
        <div class="skill-row">
-         <img class="programming" src="images/programming.png" alt="Programming-Img">
+         <img class="programming" src="programming.png" alt="Programming-Img">
          <h3  style="text-align:left;">Lorem & Ipsum</h3>
          <p  style="text-align:left;">Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
        </div>
        <div class="skill-row">
-         <img class="web-design" src="images/web-design.png" alt="Web-design Img">
+         <img class="web-design" src="web-design.png" alt="Web-design Img">
          <h3  style="text-align:left;">Lorem Ipsum Dolor</h3>
          <p  style="text-align:left;">Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
        </div>
